[tool.poetry]
name = "pyoptbook"
version = "0.1.0"
description = ""
authors = ["lilpacy <revivedtomorrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipython = "^8.31.0"
notebook = "^7.3.2"
pandas = "^2.2.3"
cvxopt = "^1.3.2"
pulp = "^2.9.0"
joblib = "^1.4.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.2"
flask = "^3.1.0"
lxml = "^5.3.0"
requests = "^2.32.3"
jupyterlab = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
